--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>A python bot that plays Candy Crush.</p>
 
 <p>Due to lack of time when I coded this I warn you that it's full of hardcoded stuff :).</p>
-        <p> <img href="CCrush-Bot/board.bmp" /> </p>
+        <p> <img href="https://raw.githubusercontent.com/pcoughlin/CCrush-Bot/master/board.bmp" /> </p>
 <p>This is how it works: </p>
 
 <ol>
